<resources>
    <string name="app_name">GO-CEMIL</string>
    <string name="namarafi">ARDHIKA RAFI</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">GO-CEMILAN</string>
    <string name="backdrop_subtitle">Menu Cemilan Terfavorit</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="selamat_datang2">GO-CEMIL in Aja!</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="action_callcenter">Call Center</string>
    <string name="sms_center">SMS Center</string>
    <string name="update_user">Update User Password</string>
    <string name="action_maps">Open Maps</string>
    <string name="google_mtv_coord_zoom12">geo:37.422114,-122.086744?z=12</string>
    <string name="desc_gemblong">Jajanan tradisional berbahan dasar ketan ini dahulu sering dijual ketika malam hari atau ada hajatan. Penjual gemblong tempo dulu biasanya adalah sepasang suami-istri yang berjalan beriringan sembari meneriakkan, "Blong ... Gemblong ...," agar jajanan mereka laku.</string>
    <string name="desc_capret">Camilan renyah dari Pekalongan ini terbuat dari tepung kanji yang dibumbui khusus. Capret memiliki bentuk yang bulat pipih, namun tidak beraturan. Jajanan ini memiliki cita rasa gurih, sedap, dan renyah karena proses pembuatannya yang digoreng. Minuman pendamping untuk kudapan ini yang paling mantap adalah Limun Oriental khas Pekalongan yang segar.</string>
    <string name="desc_ganyong">Bentuk fisik ganyong seperti rempah lengkuas, namun lebih besar. Jajanan ini banyak ditemui di daerah Kutorojo, Pekalongan. Rasa ganyong sendiri manis dan empuk. Cocok jika disantap bersama segelas kopi hangat.</string>
    <string name="desc_getuk">Jajanan tradisional ini berbahan dasar ketela pohon. Sementara untuk pemanis yang dilumurkan di atasnya, gethuk menggunakan gula aren dan parutan kelapa. Rasa dari jajanan tradisional ini legit dan gurih.</string>
    <string name="desc_glundung">Dalam bahasa Jawa, glundung berarti menggelinding. Pemberian nama jajanan ini tentunya kaena glundung berbentuk seperti bola dan mudah menggelinding. Jajanan khas Pekalongan bagian selatan ini, tepatnya di daerah Kajen, terbuat dari singkong dan berisikan gula aren. Rasanya manis dan ketika dikunyah akan menimbulkan sensasi gurih nan legit yang membuat siapa saja ketagihan.</string>
    <string name="desc_ongol">Makanan lawas yang satu ini memiliki rasa gurih, manis, dan mengenyangkan. Pas sekali jika digunakan sebagai pengganti makanan pagi. Bahan dasar yang biasa digunakan adalah tepung sagu ataupun pati yang dicampur dengan gula Jawa. Warna kecokelatannya hampir mirip seperti jenang atau wajik. </string>
</resources>
