<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.d2a.droidcafe.MainActivity">
    <item
        android:id="@+id/action_sms"
        android:orderInCategory="100"
        android:title="@string/sms_center"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/update_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_maps"
        android:orderInCategory="100"
        android:title="@string/action_maps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_call"
        android:orderInCategory="20"
        android:title="@string/action_callcenter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_detail"
        android:orderInCategory="10"
        android:title="Deskripsi Menu"
        app:showAsAction="never" />
</menu>
