<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:layout_width="204dp"
        android:layout_height="259dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/gofoodlogo" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/selamat_datang"
        android:textColor="#0091EA"
        android:textSize="25sp"
        app:fontFamily="@font/baloo" />

    <TextView
        android:id="@+id/welcome_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/selamat_datang2"
        android:textColor="#0091EA"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/namarafi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/namarafi"
        android:textColor="#0091EA"
        android:textSize="25sp"
        app:fontFamily="@font/trade_winds" />

</RelativeLayout>